; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldlang.c_one_lang_size_sections_pass.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldlang.c_one_lang_size_sections_pass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@lang_statement_iteration = common dso_local global i32 0, align 4
@statement_list = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@abs_output_section = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @one_lang_size_sections_pass(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @lang_statement_iteration, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* @lang_statement_iteration, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @statement_list, i32 0, i32 0), align 4
  %8 = load i32, i32* @abs_output_section, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @lang_size_sections_1(i32 %7, i32 %8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @statement_list, i32 0, i32 0), i32 0, i32 0, i32* %9, i32 %10)
  ret void
}

declare dso_local i32 @lang_size_sections_1(i32, i32, i32*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
